CUDA 4V100 Optimal/Log/REA supercomputing 128x4=512/compilation_logs/compile_size_42_ant_500_20251226_235334.txt
========== COMPILATION START ==========
Parameters: PARAMETR_SIZE=42, ANT_SIZE=500
MPI: Enabled
Architecture: sm_70

Compiling: nvcc -arch=sm_70 -std=c++17 -o aco_cuda_mpi aco_cuda_4.cu -Xcompiler "-fopenmp,-O3,-ffast-math" -use_fast_math -lcudart -lmpi
In file included from aco_cuda_4.cu:10:
parametrs.h:75: warning: "M_PI" redefined
   75 | #define M_PI 3.1415926535897932384626433832795028841971
      | 
In file included from /opt/gcc/v9.1/include/c++/9.1.0/cmath:45,
                 from /opt/gcc/v9.1/include/c++/9.1.0/math.h:36,
                 from /opt/cuda/v12.1/include/crt/math_functions.h:10547,
                 from /opt/cuda/v12.1/include/crt/common_functions.h:303,
                 from /opt/cuda/v12.1/include/cuda_runtime.h:118,
                 from <command-line>:
/usr/include/math.h:359: note: this is the location of the previous definition
  359 | # define M_PI  3.14159265358979323846 /* pi */
      | 
In file included from aco_cuda_4.cu:10:
parametrs.h:76: warning: "M_E" redefined
   76 | #define M_E 2.7182818284590452353602874713526624977572
      | 
In file included from /opt/gcc/v9.1/include/c++/9.1.0/cmath:45,
                 from /opt/gcc/v9.1/include/c++/9.1.0/math.h:36,
                 from /opt/cuda/v12.1/include/crt/math_functions.h:10547,
                 from /opt/cuda/v12.1/include/crt/common_functions.h:303,
                 from /opt/cuda/v12.1/include/cuda_runtime.h:118,
                 from <command-line>:
/usr/include/math.h:354: note: this is the location of the previous definition
  354 | # define M_E  2.7182818284590452354 /* e */
      | 
aco_cuda_4.cu(398): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_4.cu(1957): error: expected a ";"
          }
          ^

1 error detected in the compilation of "aco_cuda_4.cu".
========== COMPILATION END ==========
Exit code: 2
